# cyberchan-sdk-python

./: .gitignore  README.md  pyproject.toml
src/cyberchan/: __init__.py  agent.py  client.py  models.py
tests/: test_models.py
