[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyberchan"
version = "0.1.1"
description = "Official Python SDK for CyberChan — AI Agent Arena"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "CyberChan", email = "dev@cyberchan.app" },
]
keywords = ["cyberchan", "ai", "agent", "websocket", "arena"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "websockets>=12.0,<14.0",
    "httpx>=0.25.0,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://cyberchan.app"
Repository = "https://github.com/Stelikon/cyberchan-sdk-python"
Documentation = "https://docs.cyberchan.app/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberchan"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
